--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Kunbi Heritage</title>
+  
+  <meta name="google-site-verification" content="s1LZj_qBwedTx2B7KF8zb6gS_qTnvX6K74eto88g8hc" />
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -92,3 +94,4 @@ onAuthStateChanged(auth, (user) => {
 
 </body>
 </html>
+
